@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,37 +27,38 @@
  * @key randomness
  * @summary Verify that mismatches of the preload attribute are properly handled in the calling convention.
  * @library /test/lib /compiler/whitebox /
- * @compile -XDenablePrimitiveClasses TestMismatchHandling.jcod TestMismatchHandling.java
+ * @enablePreview
+ * @compile TestMismatchHandling.jcod TestMismatchHandling.java
  * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
- * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -XX:+EnableValhalla -XX:+EnablePrimitiveClasses -Xbatch
+ * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -Xbatch
  *                   -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
  *                   -XX:-Inline -XX:-InlineAccessors -XX:-UseBimorphicInlining -XX:-UseCHA -XX:-UseTypeProfile
  *                   -XX:CompileCommand=compileonly,TestMismatchHandling::test*
  *                   TestMismatchHandling
- * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -XX:+EnableValhalla -XX:+EnablePrimitiveClasses -Xbatch
+ * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -Xbatch
  *                   -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
  *                   -XX:-Inline -XX:-InlineAccessors -XX:-UseBimorphicInlining -XX:-UseCHA -XX:-UseTypeProfile
  *                   -XX:CompileCommand=compileonly,*::method
  *                   TestMismatchHandling
- * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -XX:+EnableValhalla -XX:+EnablePrimitiveClasses -Xbatch
+ * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -Xbatch
  *                   -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
  *                   -XX:-Inline -XX:-InlineAccessors -XX:-UseBimorphicInlining -XX:-UseCHA -XX:-UseTypeProfile
  *                   TestMismatchHandling
- * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -XX:+EnableValhalla -XX:+EnablePrimitiveClasses -Xbatch
+ * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -Xbatch
  *                   -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
  *                   -XX:-Inline -XX:-InlineAccessors -XX:-UseBimorphicInlining -XX:-UseCHA -XX:-UseTypeProfile
  *                   -XX:-InlineTypePassFieldsAsArgs
  *                   TestMismatchHandling
- * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -XX:+EnableValhalla -XX:+EnablePrimitiveClasses -Xbatch
+ * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -Xbatch
  *                   -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
  *                   -XX:-Inline -XX:-InlineAccessors -XX:-UseBimorphicInlining -XX:-UseCHA -XX:-UseTypeProfile
  *                   -XX:-InlineTypeReturnedAsFields
  *                   TestMismatchHandling
- * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -XX:+EnableValhalla -XX:+EnablePrimitiveClasses -Xbatch
+ * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -Xbatch
  *                   -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
  *                   -XX:+DeoptimizeNMethodBarriersALot
  *                   TestMismatchHandling
- * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -XX:+EnableValhalla -XX:+EnablePrimitiveClasses -Xbatch
+ * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -Xbatch
  *                   -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
  *                   TestMismatchHandling
  */
@@ -73,7 +74,7 @@
   ASMTOOLS=/oracle/valhalla/open/test/lib
 
   # With preload attribute
-  javac TestMismatchHandlingGenerator.java
+  javac --enable-preview --source 22 TestMismatchHandlingGenerator.java
   java -cp $ASMTOOLS org.openjdk.asmtools.Main jdec MyValue1.class MyValue2.class MyValue3.class MyValue4.class MyValue5.class MyValue6.class MyValue7.class Verifiable.class B.class I3.class I4.class E.class G.class J.class K.class L.class P.class Q.class R.class S.class TestMismatchHandlingHelper.class > TestMismatchHandling.jcod
 
   # Without preload attribute
